Kubernetes/practise/testing/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: nginx-service
spec:
  selector:
    app: my-nginx
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 31000
